# pyproject.toml
[tool.poetry]
name = "papers-fetcher"
version = "0.1.0"
description = "Fetch research papers with non-academic authors from PubMed."
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.scripts]
get-papers-list = "papers_fetcher.cli:main"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"